--- a/cmd/kubectl-os/BUILD.bazel
+++ b/cmd/kubectl-os/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["kubectl-os.go"],
-    importpath = "github.com/sbueringer/kubectl-openstack-plugin/cmd",
+    importpath = "github.com/sbueringer/kubectl-openstack-plugin/cmd/kubectl-os",
     visibility = ["//visibility:private"],
     deps = [
         "//pkg/cmd:go_default_library",
@@ -12,7 +12,7 @@ go_library(
 )
 
 go_binary(
-    name = "cmd",
+    name = "kubectl-os",
     embed = [":go_default_library"],
     pure = "on",
     visibility = ["//visibility:public"],
