--- a/pkg/cmd/BUILD.bazel
+++ b/pkg/cmd/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
     importpath = "github.com/sbueringer/kubectl-openstack-plugin/pkg/cmd",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/output/mattermost:go_default_library",
         "//vendor/github.com/gophercloud/gophercloud:go_default_library",
         "//vendor/github.com/gophercloud/gophercloud/openstack:go_default_library",
         "//vendor/github.com/gophercloud/gophercloud/openstack/blockstorage/v3/volumes:go_default_library",
@@ -24,6 +25,7 @@ go_library(
         "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/loadbalancers:go_default_library",
         "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/monitors:go_default_library",
         "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/pools:go_default_library",
+        "//vendor/github.com/olekukonko/tablewriter:go_default_library",
         "//vendor/github.com/spf13/cobra:go_default_library",
         "//vendor/gopkg.in/yaml.v2:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
