--- a/cmd/kubectl-os/BUILD.bazel
+++ b/cmd/kubectl-os/BUILD.bazel
@@ -32,3 +32,11 @@ filegroup(
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
+
+load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
+
+pkg_tar(
+    name = "kubectl_os_tar",
+    srcs = [":go_default_library"],
+    extension = "tar.gz",
+)
