--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
 - sudo apt-get install moreutils -y
 
 script:
-- bazel build //cmd/kubectl-os:kubectl-os
+- ./build.sh
 #TODO enable again- go test -race -coverprofile=coverage.txt -covermode=atomic
 
 cache:
