--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,8 @@ after_success:
 - bash <(curl -s https://codecov.io/bash)
 
 before_deploy:
-- mkdir /tmp/kubectl-os
-- cp bazel-bin/cmd/kubectl-os/linux_amd64_pure_stripped/kubectl-os /tmp/kubectl-os/kubectl-os
-- tar zcvf /tmp/kubectl-os.tar.gz -C /tmp/kubectl-os kubectl-os
+- cp bazel-bin/cmd/kubectl-os/linux_amd64_pure_stripped/kubectl-os /tmp/kubectl-os
+- cp bazel-bin/cmd/kubectl-os/linux_amd64_pure_stripped/kubectl-os /tmp/kubectl-os.tar.gz
 
 deploy:
 - provider: releases
