--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,13 @@ after_success:
 
 before_deploy:
 - cp bazel-bin/cmd/kubectl-os/linux_amd64_pure_stripped/kubectl-os /tmp/kubectl-os
-- cp bazel-bin/cmd/kubectl-os/linux_amd64_pure_stripped/kubectl-os /tmp/kubectl-os.tar.gz
+- cp bazel-bin/cmd/kubectl-os/kubectl-os_tar.tar.gz /tmp/kubectl-os.tar.gz
 
 deploy:
 - provider: releases
   api_key: $GITHUB_RELEASE_TOKEN
   file:
-  - /tmp/kubectl-os/kubectl-os
+  - /tmp/kubectl-os
   - /tmp/kubectl-os.tar.gz
   overwrite: true
   skip_cleanup: true
