--- a/pkg/cmd/BUILD.bazel
+++ b/pkg/cmd/BUILD.bazel
@@ -17,20 +17,20 @@ go_library(
         "//pkg/openstack:go_default_library",
         "//pkg/output:go_default_library",
         "//pkg/output/mattermost:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/blockstorage/v3/volumes:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/compute/v2/servers:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/layer3/floatingips:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/listeners:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/loadbalancers:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/monitors:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/pools:go_default_library",
-        "//vendor/github.com/spf13/cobra:go_default_library",
-        "//vendor/gopkg.in/yaml.v2:go_default_library",
-        "//vendor/k8s.io/api/core/v1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
-        "//vendor/k8s.io/cli-runtime/pkg/genericclioptions:go_default_library",
-        "//vendor/k8s.io/client-go/rest:go_default_library",
-        "//vendor/k8s.io/client-go/tools/clientcmd/api:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/blockstorage/v3/volumes:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/compute/v2/servers:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/layer3/floatingips:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/listeners:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/loadbalancers:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/monitors:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/pools:go_default_library",
+        "@com_github_spf13_cobra//:go_default_library",
+        "@in_gopkg_yaml_v2//:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
+        "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
+        "@io_k8s_client_go//rest:go_default_library",
+        "@io_k8s_client_go//tools/clientcmd/api:go_default_library",
     ],
 )
 
