--- a/pkg/openstack/BUILD.bazel
+++ b/pkg/openstack/BUILD.bazel
@@ -6,15 +6,15 @@ go_library(
     importpath = "github.com/sbueringer/kubectl-openstack-plugin/pkg/openstack",
     visibility = ["//visibility:public"],
     deps = [
-        "//vendor/github.com/gophercloud/gophercloud:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/blockstorage/v3/volumes:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/compute/v2/servers:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/layer3/floatingips:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/listeners:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/loadbalancers:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/monitors:go_default_library",
-        "//vendor/github.com/gophercloud/gophercloud/openstack/networking/v2/extensions/lbaas_v2/pools:go_default_library",
-        "//vendor/gopkg.in/yaml.v2:go_default_library",
+        "@com_github_gophercloud_gophercloud//:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/blockstorage/v3/volumes:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/compute/v2/servers:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/layer3/floatingips:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/listeners:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/loadbalancers:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/monitors:go_default_library",
+        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/pools:go_default_library",
+        "@in_gopkg_yaml_v2//:go_default_library",
     ],
 )
