--- a/pkg/output/BUILD.bazel
+++ b/pkg/output/BUILD.bazel
@@ -5,5 +5,5 @@ go_library(
     srcs = ["table.go"],
     importpath = "github.com/sbueringer/kubectl-openstack-plugin/pkg/output",
     visibility = ["//visibility:public"],
-    deps = ["//vendor/github.com/olekukonko/tablewriter:go_default_library"],
+    deps = ["@com_github_olekukonko_tablewriter//:go_default_library"],
 )
